# ndjt

./: .gitignore  CHANGELOG.md  LICENSE  flake.nix  ndjt.cabal  result  xrdj.cabal
app/: Command.hs  Draw.hs  Logging.hs  Main.hs  Network.hs  Parse.hs  Types.hs  Util.hs  XML.hs
ndjt-xml-rust/: Cargo.toml
ndjt-xml-rust/src/: lib.rs  main.rs
rpfps/: Cargo.toml  b.xrns  c.xrns
rpfps/src/: main.rs
xras/: Cargo.toml  a.xrns  digest  out.toml
