cabal-version:      3.4
name:               xrdj
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             nks
maintainer:         nks@9k.vc
-- copyright:
category:           Sound
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -threaded

executable ndjt
    import:           warnings
    main-is:          Main.hs
    other-modules: Command, Types, Logging, Util, Parse, Draw, Network
    -- other-extensions:
    build-depends:    
        base >=4.16
      , bytestring
      , vty
      , hosc
      , transformers
      , time
      , co-log-core
      , directory
      , network
      , text
      , wide-word
      , digest
      , bitvec
      , vector
      , nonempty-zipper
      , vty-unix
      , unix
      , attoparsec
      , ip
      , text
      , libssh2 == 0.2.0.9
      , async
      , process
    hs-source-dirs:   app
    default-language: GHC2021
