[package]
name = "ndjt-xml-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
haskell-ffi.git = "https://github.com/BeFunctional/haskell-rust-ffi.git"
haskell-ffi.rev = "2bf292e2e56eac8e9fb0fb2e1450cf4a4bd01274"
zip = "1.1.1"
quick-xml = "0.31.0"
encoding_rs_io = "0.1.7"

[features]
capi = []

[package.metadata.capi.library]
versioning = false
